<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddWater">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:layout_gravity="center">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/title_add_water"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_water"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:layout_marginBottom="15dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/add_custom_amount_of_water"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/add_custom_water"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/blue"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/add_custom_water_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_water"
                android:layout_margin="5sp" />

            <Button
                android:id="@+id/add_8oz_water_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8_oz"
                android:layout_margin="5sp" />

            <Button
                android:id="@+id/add_16oz_water_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_16_oz"
                android:layout_margin="5sp" />

            <Button
                android:id="@+id/add_32oz_water_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_32_oz"
                android:layout_margin="5sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/total_water_consumption_today"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_water_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/_0_oz"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>